<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<parent>
		<artifactId>root</artifactId>
		<groupId>org.richfaces</groupId>
		<version>${govway-monitor-ui.version}</version>
	</parent>
	<modelVersion>4.0.0</modelVersion>
	<artifactId>ui</artifactId>
	<packaging>pom</packaging>
	<name>RichFaces Components</name>
	<properties>
		<!-- -->
		<maven.test.skip>true</maven.test.skip>
	</properties>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-source</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<!-- Verificare perche' aggiornando il plugin la compilazione fallisce perche' mancano classi nel classpath -->
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>2.0</version>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<configuration>
						<archive>
							<index>true</index>
							<manifest>
								<addDefaultSpecificationEntries>
									true
								</addDefaultSpecificationEntries>
								<addDefaultImplementationEntries>
									true
								</addDefaultImplementationEntries>
							</manifest>
							<manifestEntries>
								<mode>development</mode>
								<Build-Number>
									${buildNumber}
								</Build-Number>
							</manifestEntries>
						</archive>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<profiles>
		<profile>
			<id>clover</id>
			<build>
				<resources>
					<resource>
						<directory>
							src/main/resources
						</directory>	
					</resource>
					<resource>
						<directory>
							target/generated-component/resources
						</directory>	
					</resource>
				</resources>
			</build>
		</profile>
		<profile>
			<id>jsf1_2</id>
			<dependencies>
			<dependency>
				<groupId>javax.faces</groupId>
				<artifactId>jsf-api</artifactId>
				<version>${govway-monitor-ui.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.faces</groupId>
				<artifactId>jsf-impl</artifactId>
				<version>${govway-monitor-ui.version}</version>
			</dependency>
				<dependency>
					<groupId>org.richfaces.framework</groupId>
					<artifactId>richfaces-impl</artifactId>
					<version>${project.version}</version>
					<scope>provided</scope>
				</dependency>
			</dependencies>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
		</profile>
	</profiles>
	<modules>
		<module>core</module>
		<module>drag-drop</module>
		<module>effect</module>
		<module>panel</module>
		<module>panelbar</module>
		<module>jQuery</module>
		<module>spacer</module>
		<module>togglePanel</module>
		<module>tabPanel</module>
		<module>simpleTogglePanel</module>
		<module>inputnumber-slider</module> <!-- very slow -->
		<module>inputnumber-spinner</module>
		<module>suggestionbox</module>
		<module>dataTable</module>
		<module>modal-panel</module>
		<module>datascroller</module> <!-- very slow -->
		<module>menu-components</module>
		<module>dropdown-menu</module>
		<module>tooltip</module>
		<module>panelmenu</module>
		<module>calendar</module>
		<module>message</module>
		<module>scrollableDataTable</module>
		<module>insert</module>
		<module>componentControl</module>
		<module>orderingList</module>
		<module>listShuttle</module>
		<module>contextMenu</module>
		<module>columns</module>
		<module>combobox</module>
		<module>pickList</module>
		<module>functions</module>
		<module>hotKey</module>
		<module>beanValidator</module>
		<module>state</module>
		<module>extendedDataTable</module>
		<module>layout</module>
  </modules>
	<dependencies>
		<dependency>
			<groupId>org.richfaces.framework</groupId>
			<artifactId>richfaces-api</artifactId>
			<version>${govway-monitor-ui.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<version>${commons-collections.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>${commons-beanutils.version}</version>
		</dependency>		
		<dependency>
			<groupId>opensymphony</groupId>
			<artifactId>oscache</artifactId>
			<version>2.3</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>nekohtml</groupId>
			<artifactId>nekohtml</artifactId>
			<version>1.9.6</version>
			<exclusions>
				<exclusion>
					<groupId>xerces</groupId>
					<artifactId>xercesImpl</artifactId>
				</exclusion>
			</exclusions>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>xerces</groupId>
			<artifactId>xercesImpl</artifactId>
			<version>2.9.1</version>
			<exclusions>
				<exclusion>
					<groupId>xml-apis</groupId>
					<artifactId>xml-apis</artifactId>
				</exclusion>
			</exclusions>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>commons-digester</groupId>
			<artifactId>commons-digester</artifactId>
			<version>${commons-digester.version}</version>
			<exclusions>
				<exclusion>
					<artifactId>commons-logging</artifactId>
					<groupId>commons-logging</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.sun.facelets</groupId>
			<artifactId>jsf-facelets</artifactId>
			<version>${govway-monitor-ui.version}</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>jakarta.el</groupId>
			<artifactId>jakarta.el-api</artifactId>
			<version>${jakarta.el-api.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>${commons-logging.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
		    	<groupId>jakarta.servlet</groupId>
		    	<artifactId>jakarta.servlet-api</artifactId>
		   	<version>${jakarta.servlet-api.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>jakarta.servlet.jsp</groupId>
			<artifactId>jakarta.servlet.jsp-api</artifactId>
			<version>${jakarta.servlet-jsp-api.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>jakarta.servlet.jsp.jstl</groupId>
			<artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
			<version>${jakarta.jstl.version}</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
</project>
